--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
         material = "src: #space">
       </a-sky>
 
+      <a-plane 
+        position="2 5.25 -5"
+        width="5"
+        height="0.5"
+        color="black">
+      </a-plane>
+      <a-entity position="2 5.25 -5" text="width: 7; color: white; align: center; value: Click on one of the worlds!;"></a-entity>
+
       <!--position: left right, up down, further closer-->   
       
       <a-sphere 
