--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         height="0.5"
         color="black">
       </a-plane>
-      <a-entity position="2 5.25 -5" text="width: 7; color: white; align: center; value: Click on one of the worlds!;"></a-entity>
+      <a-entity position="2 5.25 -5" 
+      text="width: 7; color: white; align: center; value: Click on one of the worlds!;">
+      </a-entity>
 
       <!--position: left right, up down, further closer-->   
       
