--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         </a-cursor>
       </a-camera>
 
+      <a-entity oculus-touch-controls="hand: left"></a-entity>
+      <a-entity oculus-touch-controls="hand: right"></a-entity>
+
       <!--light particles-->
       <a-entity position="-12 1.25 -5"  particle-system="preset: dust; particleCount: 1000"></a-entity>
 
@@ -37,7 +40,7 @@
         material = "src: #space">
       </a-sky>
 
-      <!-- <a-plane 
+      <a-plane 
         position="2 5.25 -5"
         width="5"
         height="0.5"
@@ -45,7 +48,7 @@
       </a-plane>
       <a-entity position="2 5.25 -5" 
       text="width: 7; color: white; align: center; value: Click on one of the worlds!;">
-      </a-entity> -->
+      </a-entity>
 
       <!--position: left right, up down, further closer-->   
       
