--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script> <!--falling stars-->
     <script src="scripts/main.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
 
   </head>
   <body>
@@ -24,17 +25,23 @@
         <img id="neptune" src="images/neptune.jpg" crossorigin="anonymous" />
       </a-assets>
      
-      <a-camera position="3 1 2" id="myCamera">
+      <!-- <a-camera position="3 1 2" id="myCamera">
         <a-cursor intersection-spawn="Event: click; mixin: voxel;">
         </a-cursor>
         
-      </a-camera>
+      </a-camera> -->
 
       <!-- <a-entity oculus-touch-controls="hand: left"></a-entity>
       <a-entity oculus-touch-controls="hand: right"></a-entity> -->
 
-      <a-entity oculus-touch-controls="hand: left" thumbstick-logging></a-entity>
-      <a-entity oculus-touch-controls="hand: right" thumbstick-logging></a-entity>
+      <!-- <a-entity oculus-touch-controls="hand: left" thumbstick-logging></a-entity>
+      <a-entity oculus-touch-controls="hand: right" thumbstick-logging></a-entity> -->
+
+      <a-entity movements-controls="speed: 0.15" position="0 0 6">
+      </a-entity camera position="- 1.6 0"
+      look-controls="pointerLockEnabled: true">
+      <a-cursor></a-cursor>
+      </a-entity>
 
       <!--light particles-->
       <a-entity position="-12 1.25 -5"  particle-system="preset: dust; particleCount: 1000"></a-entity>
