--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>The Solar System</title>
     <meta name="viewport" content="width=device-width">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script> <!--falling stars-->
+    <!-- <script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script> falling stars -->
     <script src="scripts/main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
 
@@ -44,7 +44,7 @@
       </a-entity>
 
       <!--light particles-->
-      <a-entity position="-12 1.25 -5"  particle-system="preset: dust; particleCount: 1000"></a-entity>
+      <!-- <a-entity position="-12 1.25 -5"  particle-system="preset: dust; particleCount: 1000"></a-entity> -->
 
       <a-sky
         color = "#FFFFFF" 
