--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       <a-cursor></a-cursor>
       </a-entity> -->
 
+      <a-entity laser-controls="hand: left" raycaster="showLine: true; objects: .clickable;"></a-entity>
+      <a-entity laser-controls="hand: right" raycaster="showLine: true; objects: .clickable;"></a-entity>
+
       <!--light particles-->
       <a-entity position="-12 1.25 -5"  particle-system="preset: dust; particleCount: 1000"></a-entity>
 
