--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <img id="neptune" src="images/neptune.jpg" crossorigin="anonymous" />
       </a-assets>
      
-      <!-- <a-camera position="3 1 2" id="myCamera">
+      <a-camera position="3 1 2" id="myCamera">
         <a-cursor intersection-spawn="Event: click; mixin: voxel;">
         </a-cursor>
         
-      </a-camera> -->
+      </a-camera>
 
       <!-- <a-entity oculus-touch-controls="hand: left"></a-entity>
       <a-entity oculus-touch-controls="hand: right"></a-entity> -->
@@ -43,8 +43,8 @@
       <a-cursor></a-cursor>
       </a-entity> -->
 
-      <a-entity laser-controls="hand: left" raycaster="showLine: true; objects: .clickable;"></a-entity>
-      <a-entity laser-controls="hand: right" raycaster="showLine: true; objects: .clickable;"></a-entity>
+      <a-entity laser-controls="hand: left" raycaster="showLine: true; objects: .click;"></a-entity>
+      <a-entity laser-controls="hand: right" raycaster="showLine: true; objects: .click;"></a-entity>
 
       <!--light particles-->
       <a-entity position="-12 1.25 -5"  particle-system="preset: dust; particleCount: 1000"></a-entity>
