--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </a-cursor>
       </a-camera>
 
-      <!-- <a-entity oculus-touch-controls="hand: left"></a-entity>
-      <a-entity oculus-touch-controls="hand: right"></a-entity> -->
+      <a-entity oculus-touch-controls="hand: left"></a-entity>
+      <a-entity oculus-touch-controls="hand: right"></a-entity>
 
       <!-- <a-entity oculus-touch-controls="hand: left" thumbstick-logging></a-entity>
       <a-entity oculus-touch-controls="hand: right" thumbstick-logging></a-entity> -->
@@ -226,19 +226,19 @@
   <script>
     document
     .querySelector("#neptunePlanet")
-    .addEventListener("click", e => {
+    .addEventListener("triggerdown", e => {
       location.href = "Houwin_vissenspel/neptune.html";
     });
 
     document
     .querySelector("#uranusPlanet")
-    .addEventListener("click", e => {
+    .addEventListener("triggerdown", e => {
       location.href = "Kisha/index.html";
     });
 
     document
     .querySelector("#marsPlanet")
-    .addEventListener("click", e => {
+    .addEventListener("triggerdown", e => {
       location.href = "Houwin_mars/mars.html";
     });
   </script>
