--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <a-entity oculus-touch-controls="hand: left"></a-entity>
       <a-entity oculus-touch-controls="hand: right"></a-entity>
 
-      <!-- <a-entity oculus-touch-controls="hand: left" thumbstick-logging></a-entity>
-      <a-entity oculus-touch-controls="hand: right" thumbstick-logging></a-entity> -->
+      <a-entity oculus-touch-controls="hand: left" thumbstick-logging></a-entity>
+      <a-entity oculus-touch-controls="hand: right" thumbstick-logging></a-entity>
 
       <!-- <a-entity movements-controls="speed: 0.15" position="0 0 6">
       </a-entity camera position="- 1.6 0"
@@ -42,8 +42,8 @@
       <a-cursor></a-cursor>
       </a-entity> -->
 
-      <a-entity laser-controls="hand: left" raycaster="showLine: true; objects: .clickable;"></a-entity>
-      <a-entity laser-controls="hand: right" raycaster="showLine: true; objects: .clickable;"></a-entity>
+      <!-- <a-entity laser-controls="hand: left" raycaster="showLine: true; objects: .clickable;"></a-entity>
+      <a-entity laser-controls="hand: right" raycaster="showLine: true; objects: .clickable;"></a-entity> -->
 
       <!--light particles-->
       <a-entity position="-12 1.25 -5"  particle-system="preset: dust; particleCount: 1000"></a-entity>
