--- a/index.html
+++ b/index.html
@@ -226,19 +226,19 @@
   <script>
     document
     .querySelector("#neptunePlanet")
-    .addEventListener("click", e => {
+    .addEventListener("mouseenter", e => {
       location.href = "Houwin_vissenspel/neptune.html";
     });
 
     document
     .querySelector("#uranusPlanet")
-    .addEventListener("click", e => {
+    .addEventListener("mouseenter", e => {
       location.href = "Kisha/index.html";
     });
 
     document
     .querySelector("#marsPlanet")
-    .addEventListener("click", e => {
+    .addEventListener("mouseenter", e => {
       location.href = "Houwin_mars/mars.html";
     });
   </script>
