--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </a-assets>
      
       <a-camera position="3 1 2" id="myCamera">
-        <a-cursor intersection-spawn="Event: click; mixin: voxel;">
+        <a-cursor intersection-spawn="Event: click; mixin: voxel;" material="color: white;>
         </a-cursor>
       </a-camera>
 
