--- a/Kisha/level3.html
+++ b/Kisha/level3.html
@@ -24,5 +24,5 @@
   </body>
   <script src="https://codechangers.com/camps2019/vr/shoot-partial.js"></script>
   <script src="script.js"></script>
-  <script>nextLevel = '../index.html';</script>
+  <script>nextLevel = '../home.html';</script>
 </html>
